<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<TextView android:layout_width="fill_parent"
		android:layout_height="10dp" android:layout_weight="2" />
		
	<Spinner android:id="@+id/spinner" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:prompt="@string/choose_language"
		style="@style/ButtonText" android:background="@drawable/letter" />

	<TextView android:layout_width="10dp" android:layout_height="50dp" />

	<Button android:id="@+id/btn_start" style="@style/ButtonText"
		android:background="@drawable/letter" android:text="@string/start"
		android:layout_gravity="center_horizontal" />	
		
	<TextView android:layout_width="fill_parent"
		android:layout_height="10dp" android:layout_weight="2" />
		
		<Button android:id="@+id/btn_highscores" style="@style/ButtonText"
		android:background="@drawable/letter" android:text="@string/highscores"
		android:layout_gravity="center_horizontal" />

	<TextView android:layout_width="fill_parent"
		android:layout_height="10dp" android:layout_weight="2" />

	<Button android:id="@+id/btn_about" style="@style/ButtonText"
		android:background="@drawable/letter" android:text="@string/about"
		android:textSize="24sp" android:layout_gravity="center_horizontal" />
</LinearLayout>